@@ -143,10 +143,12 @@ namespace DAnCE
           DANCE_ERROR (1, (LM_ERROR, "Failed to add the type\n"));
       }
 
-    XML_Helper::XML_HELPER.get_resolver ().get_resolver ().add_path (ACE_TEXT ("DANCE_ROOT"),
-                                                                     ACE_TEXT ("/docs/schema/"));
-    XML_Helper::XML_HELPER.get_resolver ().get_resolver ().add_path (ACE_TEXT ("CIAO_ROOT"),
-                                                                     ACE_TEXT ("/docs/schema/"));
+    CIAO::Config_Handlers::XML_Helper::
+      XML_HELPER.get_resolver ().get_resolver ().add_path (ACE_TEXT ("DANCE_ROOT"),
+                                                           ACE_TEXT ("/docs/schema/"));
+    CIAO::Config_Handlers::XML_Helper::
+      XML_HELPER.get_resolver ().get_resolver ().add_path (ACE_TEXT ("CIAO_ROOT"),
+                                                           ACE_TEXT ("/docs/schema/"));
 
   }
 
